--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -1,18 +1,20 @@
 batchSize: 1 
 nThreads: 4
 image-size:
-  loadSize: 286  # scale images to this size
+  loadSize: 256  # scale images to this size
   fineSize: 256  # then crop to this size
 
 input_nc: 1  # # of input image channels
 output_nc: 1  # # of output image channels
 ngf: 64
 ndf: 64
-train_split: 0.95
-data_path: '/work3/s203768/EMSoftData/torch/Fe-master-30kV-sig-0-thickness-300.pt'
+train_split: 0.90
+data_path: '/work3/s203768/EMSoftData/torch/Ni-master-30kV-sig-0-thickness-300.pt'
+test_data_path: '/work3/s203768/EMSoftData/torch/testdata.pt'
+train_data_path: '/work3/s203768/EMSoftData/torch/traindata.pt'
 
 optimizer:
-  epochs: 300  # # of iter at starting learning rate
+  epochs: 100  # # of iter at starting learning rate
   lr: 0.0002  # initial learning rate for adam
   beta1: 0.5  # momentum term of adam
   ntrain: inf  # # of examples per epoch. inf for full dataset
@@ -20,14 +22,16 @@ augment:
   flip: 1  # if flip the images for data augmentation
 
 saving:
-  save_epoch_freq: 50  
+  save_epoch_freq: 5  
   print_freq: 3000  
   display_freq: 100 
   save_display_freq: 5000  
   continue_train: 0  
-  checkpoints_dir: '/work3/s203768/EMSoftData/checkpoints' 
-  figure_dir: '/work3/s203768/EMSoftData/figs/training' 
+  checkpoints_dir: '/work3/s203768/EMSoftData/checkpoints/flips' 
+  figure_dir: '/work3/s203768/EMSoftData/figs/training/flips' 
 loss:
   use_GAN: 1  # set to 0 to turn off GAN term
   use_L1: 1  # set to 0 to turn off L1 term
   lambda_L1: 100  # weight on L1 term in objective
+  DI: 1
+  lambda_DI: 1000
